--- a/TodoListApp/app/src/main/res/values/strings.xml
+++ b/TodoListApp/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="todo_item">Enter todo item</string>
     <string name="label_add">Add</string>
+    <string name="add_item_success">Item added</string>
+    <string name="add_item_failed">Failed to add item</string>
+    <string name="message_item_not_empty">Todo item cannot be empty!</string>
 
 </resources>
