--- a/TodoListApp/app/src/main/res/values/strings.xml
+++ b/TodoListApp/app/src/main/res/values/strings.xml
@@ -3,11 +3,12 @@
 
     <string name="app_name">TodoListApp</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="clear_list">Clear list</string>
     <string name="todo_item">Enter todo item</string>
     <string name="label_add">Add</string>
     <string name="add_item_success">Item added</string>
     <string name="add_item_failed">Failed to add item</string>
     <string name="message_item_not_empty">Todo item cannot be empty!</string>
+    <string name="message_remove_all_failed">Failed to remove all items in list</string>
 
 </resources>
