--- a/TodoListApp/app/src/main/res/values/strings.xml
+++ b/TodoListApp/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="add_item_failed">Failed to add item</string>
     <string name="message_item_not_empty">Todo item cannot be empty!</string>
     <string name="message_remove_all_failed">Failed to remove all items in list</string>
+    <string name="remove_item_success">Item removed</string>
+    <string name="remove_item_failed">Error deleting item</string>
 
 </resources>
