--- a/TodoListApp/app/src/main/res/values/strings.xml
+++ b/TodoListApp/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="message_remove_all_failed">Failed to remove all items in list</string>
     <string name="remove_item_success">Item removed</string>
     <string name="remove_item_failed">Error deleting item</string>
+    <string name="confirm_remove_item">Are you sure you want to remove this item?</string>
 
 </resources>
